# console_scrapper

./: README.md  liste_final.json  pyproject.toml
Final/: lib_learning.py  lib_preprocessing.py  librairie_1.py  librairie_2.py  librairie_3.py  librairie_4.py  settings.json  test_final.ipynb
Final/.ipynb_checkpoints/: test_final-checkpoint.ipynb
test/: test_lib_learning.py  test_lib_preprocessing.py  test_librairie_1.py  test_librairie_2.py
