[tool.poetry]
name = "projet-ml"
version = "0.1.0"
description = ""
authors = ["Basma-G <127091566+Basma-Ghaffour@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "projet_ml"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.3"
pytest = "^7.4.4"
jupyter = "^1.0.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
rich = "^13.7.0"
xgboost = "^2.0.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
